[gd_scene load_steps=8 format=3 uid="uid://blyjgssvqoxb3"]

[ext_resource type="Script" uid="uid://hvwxs7kgfy6p" path="res://HUD.gd" id="1"]
[ext_resource type="FontFile" uid="uid://biijgcxck62qj" path="res://Fonts/DoT_Custom_v3.ttf" id="2"]

[sub_resource type="LabelSettings" id="LabelSettings_efote"]
font_size = 35

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_vow1y"]
font = ExtResource("2")
font_size = 28

[sub_resource type="CircleShape2D" id="1"]

[sub_resource type="CircleShape2D" id="2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1")

[node name="MessageLabel" type="Label" parent="."]
offset_left = 37.0
offset_top = 457.0
offset_right = 412.0
offset_bottom = 640.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 23
text = "RUNNING
TEACHER

<aka Celula> "
label_settings = SubResource("LabelSettings_efote")
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 148.0
offset_top = 692.0
offset_right = 310.0
offset_bottom = 784.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 36
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 1.01
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.04
anchor_right = 0.04
offset_left = 228.6
offset_top = 423.0
offset_right = 309.6
offset_bottom = 456.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("5")
text = "00000000
"
label_settings = SubResource("LabelSettings_vow1y")
max_lines_visible = 1

[node name="RightTouchButton" type="TouchScreenButton" parent="."]
position = Vector2(402.00003, 728)
scale = Vector2(5.74664, 5.94445)
shape = SubResource("1")
action = "ui_right"

[node name="LeftTouchButton" type="TouchScreenButton" parent="."]
position = Vector2(60, 732)
scale = Vector2(5.94691, 5.84506)
shape = SubResource("2")
action = "ui_left"

[node name="PowerLabel" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.04
anchor_right = 0.04
offset_left = 176.6
offset_top = 728.0
offset_right = 257.6
offset_bottom = 761.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("5")
text = "00000000
"
max_lines_visible = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="RightTouchButton" to="." method="_on_RightTouchButton_pressed"]
[connection signal="released" from="RightTouchButton" to="." method="_on_RightTouchButton_released"]
[connection signal="pressed" from="LeftTouchButton" to="." method="_on_LeftTouchButton_pressed"]
[connection signal="released" from="LeftTouchButton" to="." method="_on_LeftTouchButton_released"]
